--- a/semana7/crud-sem7/nbproject/private/private.properties
+++ b/semana7/crud-sem7/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\hogar\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\Marihuano\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
